# JANREX2

./: .gitignore  Cargo.toml  README.md  todo.md
assets/shaders/: map.fs
maps/: burg.json  citadel.json  freight.json  littletown.json  lostworld.json  maps_minified.json  sandstorm.json  shipyard.json  subzero.json  undergrowth.json
maps/jsons/: 00_Burg.json  01_Littletown.json  02_Sandstorm.json  03_Subzero.json  04_Undergrowth.json  05_Shipment.json  05_Shipyard.json  06_Freight.json  07_Lostworld.json  08_Citadel.json  09_Oasis.json  10_Kanji.json  11_Industry.json  12_Lumber.json  13_Evacuation.json  14_Site.json  15_SkyTemple.json  16_Lagoon.json  17_Bureau.json  18_Tortuga.json  19_Tropicano.json  Bureau.json  Burg.json  Citadel.json  Evacuation.json  Freight.json  Industry.json  Kanji.json  Lagoon.json  Littletown.json  Lostworld.json  Lumber.json  Oasis.json  Sandstorm.json  Site.json  SkyTemple.json  Subzero.json  Tortuga.json  Undergrowth.json
scripts/: jsons_converted.py  krunker_maps_parser.py
src/: consts.rs  key_rotate.rs  main.rs  packet_sender.rs  token_fetch.rs
src/gamestate/: maps.rs  mod.rs  net.rs  render.rs  update.rs
src/gui/: draw.rs  menus.rs  mod.rs  update.rs
