[package]
name = "janrex_2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest={version="0.11", features=["json"]}
serde={version="1", features=["derive"]}
urlencoding = "2"
tokio-tungstenite = {version="0.15", features=["rustls-tls"]}
raylib = "3.5"
http="0.2"
futures-util="0.3"
futures-channel="0.3"
regex="1"
messagepack-rs="0.8"
